compiler/src/test/resources/golden/errors/trait_dup_impl.dawn
trait Ord2[T] {
  fn cmp2(a: T, b: T) -> Int
}

impl Ord2[Int] {
  fn cmp2(a: Int, b: Int) -> Int = a - b
}

impl Ord2[Int] {
  fn cmp2(a: Int, b: Int) -> Int = b - a
}

pub fn main() -> Unit !io = println("x")
