compiler/src/test/resources/golden/errors/trait_dup_impl.err
error: duplicate impl: `Ord2[Int]` is already implemented
  --> trait_dup_impl.dawn:9:6
  |
9 | impl Ord2[Int] {
  |      ^^^^
  = hint: the program allows one impl per trait and type
